--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
+				<!-- Adjust this to the URL of the manager of your tomcat server -->
 				<configuration>
 					<url>http://pig:8080/manager</url>
 				</configuration>
