--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
+				<!-- Adjust this to the URL of the manager of your tomcat server -->
 				<configuration>
 					<url>http://pig:8080/manager</url>
 				</configuration>
@@ -62,12 +63,32 @@
 			<artifactId>resteasy-jaxb-provider</artifactId>
 			<version>2.0.0.GA</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.14</version>
+		</dependency>
 	</dependencies>
 	
 	<repositories>
 		<repository>
 			<id>jboss</id>
 			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
+		</repository>
+		
+		<repository>
+			<id>java.net</id>
+			<url>http://download.java.net/maven/2</url>
+		</repository>
+
+		<repository>
+			<id>ibiblio</id>
+			<url>http://mirrors.ibiblio.org/pub/mirrors/maven2</url>
 		</repository>
 	</repositories>
 </project>
